# cpp-singleton-pattern-examples

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
01-singleton-classic-example/: CMakeLists.txt
01-singleton-classic-example/inc/: singleton.h
01-singleton-classic-example/src/: main.cpp  singleton.cpp
02-singleton-meyers-example/: CMakeLists.txt
02-singleton-meyers-example/inc/: singleton.h
02-singleton-meyers-example/src/: main.cpp  singleton.cpp
03-singleton-classic-dynamic-example/: CMakeLists.txt
03-singleton-classic-dynamic-example/inc/: singleton.h
03-singleton-classic-dynamic-example/src/: main.cpp  singleton.cpp
04-singleton-cherno-example/: CMakeLists.txt
04-singleton-cherno-example/inc/: singleton.h
04-singleton-cherno-example/src/: main.cpp  singleton.cpp
05-singleton-dclp-example/: CMakeLists.txt
05-singleton-dclp-example/inc/: singleton.h
05-singleton-dclp-example/src/: main.cpp  singleton.cpp
06-singleton-leaky-example/: CMakeLists.txt
06-singleton-leaky-example/inc/: singleton.h
06-singleton-leaky-example/src/: main.cpp
singleton-cherno-example/: CMakeLists.txt  main.cpp
singleton-cherno-example/inc/: singleton.h
singleton-cherno-example/src/: main.cpp  singleton.cpp
singleton-classic-dynamic-example/: CMakeLists.txt  main.cpp
singleton-classic-dynamic-example/inc/: singleton.h
singleton-classic-dynamic-example/src/: main.cpp  singleton.cpp
singleton-classic-example/: CMakeLists.txt
singleton-classic-example/inc/: singleton.h
singleton-classic-static-example/: CMakeLists.txt  main.cpp
singleton-classic-static-example/inc/: singleton.h
singleton-classic-static-example/src/: main.cpp  singleton.cpp
singleton-dclp-example/: CMakeLists.txt  main.cpp
singleton-dclp-example/inc/: singleton.h
singleton-dclp-example/src/: main.cpp  singleton.cpp
singleton-meyers-example/: CMakeLists.txt  main.cpp
singleton-meyers-example/inc/: singleton.h
singleton-meyers-example/src/: main.cpp  singleton.cpp
singleton-smart-pointer-example/: CMakeLists.txt  main.cpp
singleton-smart-pointer-example/inc/: singleton.h
singleton-smart-pointer-example/src/: main.cpp  singleton.cpp
