cmake_minimum_required(VERSION 3.21)
project(cpp-singleton-pattern-examples)

add_subdirectory(singleton-cherno-example)
add_subdirectory(singleton-meyers-example)
add_subdirectory(singleton-classic-static-example)
add_subdirectory(singleton-classic-dynamic-example)
add_subdirectory(singleton-dclp-example)
